--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,204 @@
 * {
     padding: 0;
     margin: 0;
-
-    
+}
+:root {
+    --font-general: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+body,
+html {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    height: 100%;
+    margin: 0;
 }
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
     background-color: rgb(36, 161, 186);
-    padding: 20px 30px;
-}
-
-nav {
+    padding: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+    border-radius: 0px 0px 30px 30px;
 }
-nav a {
+
+nav {
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-family: var(--font-general);
+}
+
+nav a,
+header h1 {
     text-decoration: none;
     color: white;
     margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    margin: 50px 0px;
+}
+
+section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 20px;
+}
+#contacto {
+    display: flex;
+    font-family: var(--font-general);
+    gap:50px;
+    justify-content: center;
+    align-items: center;
+}
+
+#contacto p {
+    text-align: center;
+}
+
+#grid-contacto {
+    display: grid;
+    gap: 10px;
+    width: 600px;
+}
+#nombre, #correo {
+    grid-row: 1;
+}
+#asunto {
+    grid-row: 2;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+#contenido {
+    grid-row: 3;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    resize: none;
+}
+
+#nombre, #correo, #asunto, #contenido {
+    border: 2px solid rgb(36, 161, 186);
+    padding: 10px;
+    animation: inputBorderNoFocus 0.5s forwards;
+    font-family: var(--font-general);
+    font-size: 16px;
+}
+#enviar {
+    background-color: rgb(36, 161, 186);
+    border: 2px solid rgb(36, 161, 186);
+    border-radius: 20px;
+    grid-row: 4;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    height: 40px;
+    font-family:  var(--font-general);
+    font-size: 16px;
+    color: white;
+}
+
+#nombre:focus, #correo:focus, #asunto:focus, #contenido:focus{
+    animation: inputBorderFocus 0.5s forwards;
+    outline: none;
+}
+
+input::placeholder {
+    font-family: var(--font-general);
+}
+@keyframes inputBorderFocus {
+    0%{
+        border-radius: 5px;
+        border-width: 2px;
+    }
+    100% {
+        border-radius: 20px;
+        border-width: 4px;
+    }
+}
+
+@keyframes inputBorderNoFocus {
+    0%{
+        border-radius: 20px;
+        border-width: 4px;
+    }
+    100% {
+        border-radius: 5px;
+        
+        border-width: 2px;
+    }
+}
+
+
+footer {
+    color: rgb(36, 161, 186);
+    text-align: center;
+    padding: 10px 0;
+    border-top: 2px solid rgb(36, 161, 186);
+
+    margin: 20px 20px 0 20px;
+
+}
+
+footer ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 20px;
+    flex-wrap: wrap;
+}
+
+footer li {
+    list-style: none;
+    margin: 0px 10px;
 }
 
 #current-page {
-    transform:scale(1.2);
+    transform: scale(1.2);
     text-decoration: underline;
 }
 
-body {
-background-color: rgb(12, 51, 65);
-}
 
-@media (max-width: 600px) {
-    nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+@media screen and (max-width: 700px) {
+    header {
+        flex-direction: column;
+        height: 100px;
+    }
+
+    nav,
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    nav a {
+        margin: 8px;
+    }
+
+    main {
+        margin: 100px 0px;
+    }
+    #grid-contacto {
+        width: 100%;
     }
 }
