--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,28 @@
+:root {
+    --font-general: 'Roboto Condensed', 'Bebas Neue', 'Roboto Condensed',sans-serif;
+    --font-title: 'Bebas Neue', 'Roboto Condensed', sans-serif;
+    --color-1: #F24F13;
+    --color-2: #F26430;
+    --color-3: #F2865E;
+    --color-4: #F2C1AE;
+    --color-5: #F2F2F2;
+}
+
 * {
     padding: 0;
     margin: 0;
 }
-:root {
-    --font-general: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
+
 body,
 html {
     display: flex;
     flex-direction: column;
-    background-color: white;
     height: 100%;
-    margin: 0;
+    background-color: var(--color-5);
+    font-family: var(--font-general);
 }
+
+/* Header */
 
 header {
     position: fixed;
@@ -20,155 +30,30 @@ header {
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: rgb(36, 161, 186);
-    padding: 0px;
+    z-index: 1000;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    color: white;
-    border-radius: 0px 0px 30px 30px;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-5);
 }
 
-nav {
-    margin: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    font-family: var(--font-general);
-}
-
-nav a,
 header h1 {
+    font-family: var(--font-title);
+    color: var(--color-2);
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+nav a {
     text-decoration: none;
-    color: white;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
-    margin: 50px 0px;
-}
-
-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 20px;
-}
-#contacto {
-    display: flex;
-    font-family: var(--font-general);
-    gap:50px;
-    justify-content: center;
-    align-items: center;
-}
-
-#contacto p {
-    text-align: center;
-}
-
-#grid-contacto {
-    display: grid;
-    gap: 10px;
-    width: 600px;
-}
-#nombre, #correo {
-    grid-row: 1;
-}
-#asunto {
-    grid-row: 2;
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-#contenido {
-    grid-row: 3;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    resize: none;
-}
-
-#nombre, #correo, #asunto, #contenido {
-    border: 2px solid rgb(36, 161, 186);
-    padding: 10px;
-    animation: inputBorderNoFocus 0.5s forwards;
-    font-family: var(--font-general);
-    font-size: 16px;
-}
-#enviar {
-    background-color: rgb(36, 161, 186);
-    border: 2px solid rgb(36, 161, 186);
-    border-radius: 20px;
-    grid-row: 4;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    height: 40px;
-    font-family:  var(--font-general);
-    font-size: 16px;
-    color: white;
-}
-
-#nombre:focus, #correo:focus, #asunto:focus, #contenido:focus{
-    animation: inputBorderFocus 0.5s forwards;
-    outline: none;
-}
-
-input::placeholder {
-    font-family: var(--font-general);
-}
-@keyframes inputBorderFocus {
-    0%{
-        border-radius: 5px;
-        border-width: 2px;
-    }
-    100% {
-        border-radius: 20px;
-        border-width: 4px;
-    }
-}
-
-@keyframes inputBorderNoFocus {
-    0%{
-        border-radius: 20px;
-        border-width: 4px;
-    }
-    100% {
-        border-radius: 5px;
-        
-        border-width: 2px;
-    }
-}
-
-
-footer {
-    color: rgb(36, 161, 186);
-    text-align: center;
-    padding: 10px 0;
-    border-top: 2px solid rgb(36, 161, 186);
-
-    margin: 20px 20px 0 20px;
-
-}
-
-footer ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin: 0px 20px;
-    flex-wrap: wrap;
-}
-
-footer li {
-    list-style: none;
-    margin: 0px 10px;
+    font-weight: bold;
+    color: var(--color-2);
 }
 
 #current-page {
@@ -176,29 +61,156 @@ footer li {
     text-decoration: underline;
 }
 
+/* Content */
 
+main {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 50px 0 20px 0;
+}
 
+section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px 0;
+    width: 100%;
+    gap: 20px;
+}
+
+/* Pagina Principal */
+
+#bienvenida {
+    height: 200px;
+    background-color: var(--color-2);
+    gap: 0px;
+    min-height: 300px;
+}
+
+#bienvenida h2{
+    display: flex;
+    width: 90%;
+    height: 90%;
+    font-size: 15vw;
+    color: var(--color-5);
+    align-items: center;
+    justify-content: center;
+}
+
+#bienvenida h3 {
+    height: 20%;
+    width: 90%;
+    font-size: 3vw;
+    text-align: center;
+    color: var(--color-4);
+}
+
+/* Contacto */
+
+#contacto p {
+    text-align: center;
+    width: 90%;
+}
+
+#grid-contacto {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 10px;
+    width: 90%;
+    max-width: 500px;
+}
+
+#grid-contacto input,  #grid-contacto textarea{
+    font-family: var(--font-general);
+    border: 2px solid var(--color-2);
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+#grid-contacto input::placeholder,  #grid-contacto textarea::placeholder{
+    color: var(--color-4);
+
+}
+
+#grid-contacto input:focus,  #grid-contacto textarea:focus{
+    outline: 2px solid var(--color-2);
+
+}
+
+#asunto,
+#contenido {
+    grid-column: 1 / 3;
+}
+
+textarea {
+    resize: none;
+}
+
+#enviar {
+    font-family: var(--font-general);
+    grid-column: 1 / 3;
+    background-color: var(--color-2);
+    color: var(--color-5);
+}
+
+#enviar:active {
+    background-color: var(--color-3);
+}
+section h2 {
+    text-align: center;
+    font-family: var(--font-title);
+    width: 150px;
+    border-bottom: 2px solid var(--color-2);
+    color: var(--color-2);
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-top: 2px solid var(--color-2);
+    margin: 0 20px;
+    padding: 5px 0;
+    gap: 5px;
+    color: var(--color-2);
+}
+
+footer ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    list-style-type: none;
+}
+
+footer a {
+    color: var(--color-2);
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+#copyright {
+    font-family: var(--font-title);
+}
+
+/* Portrait */
 @media screen and (max-width: 700px) {
     header {
         flex-direction: column;
-        height: 100px;
-    }
-
-    nav,
-    header {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    nav a {
-        margin: 8px;
+        height: 80px;
     }
 
     main {
-        margin: 100px 0px;
-    }
-    #grid-contacto {
-        width: 100%;
+        padding: 80px 0 20px 0;
     }
 }
