--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 :root {
-    --font-general: 'Roboto Condensed', 'Bebas Neue', 'Roboto Condensed',sans-serif;
+    --font-general: 'Roboto Condensed', 'Bebas Neue', 'Roboto Condensed', sans-serif;
     --font-title: 'Bebas Neue', 'Roboto Condensed', sans-serif;
-    --color-1: #F24F13;
-    --color-2: #F26430;
-    --color-3: #F2865E;
-    --color-4: #F2C1AE;
-    --color-5: #F2F2F2;
+    --color-1: rgb(242, 79, 19);
+    --color-2: rgb(242, 100, 48);
+    --color-2-alfa: rgba(242, 100, 48, 0.8);
+    --color-3: rgb(242, 134, 94);
+    --color-4: rgb(242, 193, 174);
+    --color-5: rgb(242, 242, 242);
+    --color-6: rgb(28, 28, 28);
+    --color-6-alfa: rgb(28, 28, 28, 0.8);
 }
 
 * {
@@ -28,25 +31,27 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 50px;
+    width: 100vw;
     z-index: 1000;
     display: flex;
-    padding: 10px 20px;
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
     background-color: var(--color-5);
+    padding: 5px 50px;
 }
 
 header h1 {
+    display: flex;
     font-family: var(--font-title);
     color: var(--color-2);
+    align-items: center;
+    text-align: center;
 }
 
 header nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 20px;
 }
 
@@ -57,7 +62,6 @@ nav a {
 }
 
 #current-page {
-    transform: scale(1.2);
     text-decoration: underline;
 }
 
@@ -67,62 +71,251 @@ main {
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding: 50px 0 20px 0;
+    box-sizing: border-box;
+    background-attachment: fixed;
+    background-size: cover;
 }
+
+#pagina-principal {
+    background-image: url('https://cdn.pixabay.com/photo/2021/11/21/21/14/mountain-6815304_1280.jpg');
+}
+
+#biografia {
+    background-image: url('https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+}
+
 
 section {
     display: flex;
+    box-sizing: border-box;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
-    padding: 20px 0;
-    width: 100%;
-    gap: 20px;
+    width: 100vw;
 }
+
+section h2 {
+    text-align: center;
+    font-family: var(--font-title);
+    width: 150px;
+    border-bottom: 2px solid var(--color-5);
+    color: var(--color-5);
+}
+
 
 /* Pagina Principal */
 
 #bienvenida {
-    height: 200px;
-    background-color: var(--color-2);
-    gap: 0px;
-    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 20px;
+    gap: 20px;
 }
 
-#bienvenida h2{
+
+grid {
+    display: grid;
+    grid-row: 2;
+    grid-template-rows: 4fr 2fr;
+    gap: 0;
+    box-sizing: border-box;
+}
+
+.filtro-color {
     display: flex;
-    width: 90%;
-    height: 90%;
-    font-size: 15vw;
-    color: var(--color-5);
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    padding-bottom: 0;
+    padding-top: 0px;
+    box-sizing: border-box;
+    background-color: var(--color-2-alfa);
+    flex: 1;
+    gap: 50px;
+}
+
+#pagina-principal .filtro-color {
+    padding-top: 50px;
+    gap: 40px;
+}
+
+#bienvenida h2 {
+    display: flex;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-size: clamp(1vw, 20vw, 12vw);
+    color: var(--color-5);
+    border: none;
 }
 
 #bienvenida h3 {
-    height: 20%;
-    width: 90%;
-    font-size: 3vw;
+    display: flex;
+    color: var(--color-5);
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    color: var(--color-4);
+}
+
+#bienvenida p {
+    display: flex;
+    color: var(--color-5);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#breve-descripcion {
+    display: flex;
+    padding: 0;
+    min-height: 90vh;
+    padding: 100px;
+}
+
+#breve-descripcion h3 {
+    text-align: center;
+}
+
+#paginas {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    background-color: var(--color-5);
+    padding: 20px;
+    width: 70vw;
+    height: 30vh;
+    max-width: 700px;
+    max-height: 200px;
+    gap: 20px;
+    border-radius: 30px;
+    box-sizing: border-box;
+}
+
+#paginas a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    text-decoration: none;
+    color: var(--color-2);
+    overflow: hidden;
+}
+
+#paginas h3 {
+    color: var(--color-2);
+    height: 20%;
+}
+
+#paginas a:hover {
+    text-decoration: underline;
+}
+
+#paginas img {
+    height: 70%;
+    width: 100%;
+    object-fit: contain;
+}
+
+/* Biografia */
+
+
+
+#biografia section {
+    padding: 70px 20px 20px 20px;
+    gap: 20px;
+}
+
+/* Portfolio */
+
+#portfolio {
+    background-image: url('https://images.pexels.com/photos/1261728/pexels-photo-1261728.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    background-size: cover;
+}
+
+#portfolio section {
+    display: flex;
+    padding: 70px 20px 20px 20px;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#portfolio article {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 5fr;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+#portfolio img {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    grid-row: 1 / 4;
+    border: 5px solid var(--color-5);
+    border-radius: 5px 0 0 5px;
+}
+
+#portfolio section p,
+#portfolio section h3 {
+    display: flex;
+    padding: 5px 20px;
+    background-color: var(--color-5);
+}
+
+#portfolio section h3 {
+    align-items: center;
+    border-radius: 0 5px 0 0;
+}
+
+#portfolio section p {
+    border-radius: 0 0 5px 0;
 }
 
 /* Contacto */
 
-#contacto p {
+#contacto {
+    background-image: url(https://cdn.pixabay.com/photo/2021/12/05/10/28/nature-6847175_1280.jpg);
+    background-size: cover;
+}
+
+#contacto section {
+    padding: 70px 20px 20px 20px;
+    gap: 20px;
+    justify-content: space-between;
+
+}
+
+#contacto section p {
     text-align: center;
     width: 90%;
+    font-size: 18px;
 }
 
 #grid-contacto {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
+    justify-content: center;
+    grid-template-columns: 50% 50%;
+    padding: 30px;
     gap: 10px;
-    width: 90%;
-    max-width: 500px;
+    width: 90vw;
+    max-width: 600px;
+    background-color: var(--color-5);
+    border-radius: 30px;
+    box-sizing: border-box;
 }
 
-#grid-contacto input,  #grid-contacto textarea{
+#grid-contacto input,
+#grid-contacto textarea {
     font-family: var(--font-general);
     border: 2px solid var(--color-2);
     border-radius: 20px;
@@ -130,12 +323,14 @@ section {
     font-size: 18px;
 }
 
-#grid-contacto input::placeholder,  #grid-contacto textarea::placeholder{
+#grid-contacto input::placeholder,
+#grid-contacto textarea::placeholder {
     color: var(--color-4);
 
 }
 
-#grid-contacto input:focus,  #grid-contacto textarea:focus{
+#grid-contacto input:focus,
+#grid-contacto textarea:focus {
     outline: 2px solid var(--color-2);
 
 }
@@ -159,13 +354,6 @@ textarea {
 #enviar:active {
     background-color: var(--color-3);
 }
-section h2 {
-    text-align: center;
-    font-family: var(--font-title);
-    width: 150px;
-    border-bottom: 2px solid var(--color-2);
-    color: var(--color-2);
-}
 
 /* Footer */
 
@@ -173,11 +361,12 @@ footer {
     display: flex;
     align-items: center;
     flex-direction: column;
-    border-top: 2px solid var(--color-2);
-    margin: 0 20px;
-    padding: 5px 0;
-    gap: 5px;
-    color: var(--color-2);
+    justify-content: space-between;
+    margin: 0 5vw;
+    width: 90vw;
+    border-top: 2px solid var(--color-5);
+    color: var(--color-5);
+    padding: 20px;
 }
 
 footer ul {
@@ -190,8 +379,9 @@ footer ul {
     list-style-type: none;
 }
 
-footer a {
-    color: var(--color-2);
+footer a,
+#copyright {
+    color: var(--color-5);
     text-decoration: none;
 }
 
@@ -201,16 +391,47 @@ footer a:hover {
 
 #copyright {
     font-family: var(--font-title);
+    font-size: larger;
 }
 
 /* Portrait */
-@media screen and (max-width: 700px) {
+@media (max-width: 700px) {
     header {
         flex-direction: column;
-        height: 80px;
+        padding: 5px;
     }
 
-    main {
-        padding: 80px 0 20px 0;
+    #biografia section,
+    #portfolio section,
+    #contacto section {
+        padding-top: 80px;
     }
+
+    #paginas {
+        height: auto;
+    }
+
+    #portfolio article {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 2fr 9fr;
+        height: 70vh;
+    }
+
+    #portfolio img {
+        grid-row: 2/3;
+        border-radius: 0 0 0 0;
+    }
+
+
+    #portfolio section h3 {
+        border-radius: 5px 5px 0 0;
+    }
+
+    #portfolio section p {
+        border-radius: 0 0 5px 5px;
+    }
+
 }
+
+
+/* Landscape */
