--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,28 @@ nav a {
 
 #current-page {
     text-decoration: underline;
+
+}
+
+#small-header {
+    display: none;
+}
+
+#small-header nav {
+    width: 80vw;
+}
+
+#small-header a {
+    /* background-color: var(--color-6); */
+    padding: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+}
+
+#small-header img {
+    width: 100%;
+
 }
 
 /* Content */
@@ -75,15 +97,6 @@ main {
     background-attachment: fixed;
     background-size: cover;
 }
-
-#pagina-principal {
-    background-image: url('https://cdn.pixabay.com/photo/2021/11/21/21/14/mountain-6815304_1280.jpg');
-}
-
-#biografia {
-    background-image: url('https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-}
-
 
 section {
     display: flex;
@@ -104,6 +117,9 @@ section h2 {
 
 
 /* Pagina Principal */
+#pagina-principal {
+    background-image: url('https://cdn.pixabay.com/photo/2021/11/21/21/14/mountain-6815304_1280.jpg');
+}
 
 #bienvenida {
     display: flex;
@@ -134,7 +150,7 @@ grid {
     box-sizing: border-box;
     background-color: var(--color-2-alfa);
     flex: 1;
-    gap: 50px;
+    gap: 20px;
 }
 
 #pagina-principal .filtro-color {
@@ -186,15 +202,12 @@ grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
-    background-color: var(--color-5);
-    padding: 20px;
     width: 70vw;
-    height: 30vh;
     max-width: 700px;
-    max-height: 200px;
     gap: 20px;
-    border-radius: 30px;
-    box-sizing: border-box;
+    align-items: center;
+    justify-items: center;
+    justify-self: center;
 }
 
 #paginas a {
@@ -202,10 +215,16 @@ grid {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
+    padding: 20px;
     text-decoration: none;
+    background-color: var(--color-5);
+    border: 5px solid var(--color-4);
+    border-radius: 100px;
     color: var(--color-2);
     overflow: hidden;
+    gap: 20px;
+    width: 100px;
+    height: 100px;
 }
 
 #paginas h3 {
@@ -225,11 +244,39 @@ grid {
 
 /* Biografia */
 
-
+#biografia {
+    background-image: url('https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+}
 
 #biografia section {
     padding: 70px 20px 20px 20px;
     gap: 20px;
+    box-sizing: border-box;
+}
+
+.fondo-blanco {
+    background-color: var(--color-5);
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 550px;
+    overflow: scroll;
+
+}
+#biografia ul {
+    padding-left: 20px;
+}
+#biografia img {
+    width: 150px;
+}
+
+#biografia #retrato {
+    float: left;
+    margin: 0 10px 10px 0;
+}
+
+#biografia #logo-empresa {
+    margin: 10px 0;
+    width: 250px;
 }
 
 /* Portfolio */
@@ -299,6 +346,7 @@ grid {
     text-align: center;
     width: 90%;
     font-size: 18px;
+    color: var(--color-5);
 }
 
 #grid-contacto {
@@ -307,10 +355,10 @@ grid {
     grid-template-columns: 50% 50%;
     padding: 30px;
     gap: 10px;
-    width: 90vw;
+    width: 100%;
     max-width: 600px;
     background-color: var(--color-5);
-    border-radius: 30px;
+    border-radius: 5px;
     box-sizing: border-box;
 }
 
@@ -401,25 +449,45 @@ footer a:hover {
         padding: 5px;
     }
 
+    #normal-header {
+        display: none;
+    }
+
+    #small-header {
+        display: flex;
+    }
+
+    #current-page {
+        background-color: var(--color-4);
+        outline: 2px solid var(--color-3);
+    }
+
     #biografia section,
     #portfolio section,
-    #contacto section {
-        padding-top: 80px;
+    #contacto section,
+    #bienvenida {
+        padding-top: 120px;
     }
 
     #paginas {
-        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    #paginas a {
+        width: 50px;
+        height: 50px;
     }
 
     #portfolio article {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 2fr 9fr;
-        height: 70vh;
+        grid-template-rows: 1fr 4fr 2fr;
     }
 
     #portfolio img {
         grid-row: 2/3;
         border-radius: 0 0 0 0;
+        object-fit: fill;
     }
 
 
@@ -433,5 +501,6 @@ footer a:hover {
 
 }
 
+@media (max-width: 400px) {}
 
 /* Landscape */
