--- a/styles.css
+++ b/styles.css
@@ -470,8 +470,7 @@ footer a:hover {
     }
 
     #paginas {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
+        width: 100%;
     }
 
     #paginas a {
